--- a/1127/style.css
+++ b/1127/style.css
@@ -132,3 +132,23 @@
         margin-left: 50px;
     }
 }
+
+@media screen and (max-width: 400px){
+    .main{
+        width: 400px;
+    }
+    .navbar{
+        width: 100%;
+    }
+    .icon{
+        width:100px;
+    }
+    .logo{
+        font-size:18px;
+        padding-left: 18px;
+    }
+    .menu ul li{
+        font-size: 15px;
+        margin-left: 30px;
+    }
+}
