--- a/1127/style.css
+++ b/1127/style.css
@@ -133,7 +133,7 @@
     }
 }
 
-/* @media screen and (max-width: 480px){
+@media screen and (max-width: 480px){
     .main{
         width: 480px;
     }
@@ -151,4 +151,4 @@
         font-size: 15px;
         margin-left: 25px;
     }
-} */
+}
