--- a/1127/style.css
+++ b/1127/style.css
@@ -97,6 +97,14 @@
     .icon{
         width:300px;
     }
+    .logo{
+        font-size:20px;
+        padding-left: 20px;
+    }
+    .menu ul li{
+        font-size: 18px;
+        margin-left: 50px;
+    }
 
 }
 
@@ -114,7 +122,7 @@
     
 }
 
-/* @media screen and (max-width: 600px){
+@media screen and (max-width: 600px){
     .main{
         width: 600px;
     }
@@ -152,4 +160,4 @@
         font-size: 15px;
         margin-left: 25px;
     }
-} */
+}
