--- a/1127/style.css
+++ b/1127/style.css
@@ -95,17 +95,8 @@
         width: 100%;
     }
     .icon{
-        width:300px;
+        width:200px;
     }
-    .logo{
-        font-size:20px;
-        padding-left: 20px;
-    }
-    .menu ul li{
-        font-size: 18px;
-        margin-left: 50px;
-    }
-
 }
 
 
@@ -132,14 +123,14 @@
     .icon{
         width:150px;
     }
-    .logo{
+    /* .logo{
         font-size:20px;
         padding-left: 20px;
     }
     .menu ul li{
         font-size: 18px;
         margin-left: 50px;
-    }
+    } */
 }
 
 @media screen and (max-width: 480px){
