--- a/1127/style.css
+++ b/1127/style.css
@@ -123,14 +123,14 @@
     .icon{
         width:150px;
     }
-    /* .logo{
+    .logo{
         font-size:20px;
         padding-left: 20px;
     }
     .menu ul li{
         font-size: 18px;
         margin-left: 50px;
-    } */
+    } 
 }
 
 @media screen and (max-width: 480px){
