--- a/1127/about.css
+++ b/1127/about.css
@@ -216,11 +216,15 @@ h1:hover{
         padding-left: 25px;
     }
     .profile{
-        width: 30%;
+        width: 100%;
+    }
+    .profile p{
+        font-size:20px;
     }
     .skillbars{
         width: 100%;
         max-width: 300px;
+        float: left;
     }
 
 }
