--- a/1127/about.css
+++ b/1127/about.css
@@ -219,9 +219,10 @@ h1:hover{
         width: 100%;
     }
     .profile p{
-        font-size:20px;
+        font-size:15px;
     }
     .skillbars{
+        margin-top:15px;
         width: 100%;
         max-width: 300px;
         float: left;
