--- a/1127/about.css
+++ b/1127/about.css
@@ -5,8 +5,10 @@
 
 .main{
     width: 100%;
+    height: 109vh;
     margin-left: auto;
     margin-right: auto;
+    /* background-color:orange; */
 }
 
 .navbar{
@@ -108,6 +110,13 @@ h1:hover{
     max-width: 600px;
 }
 
+.known{
+    font-weight: bold;
+    font-size:40px;
+    text-align: center;
+    color:#7B7B7B;
+}
+
 .skill-name{
     font-size: 18px;
     font-weight: 700;
@@ -153,6 +162,16 @@ h1:hover{
     right: 0;
     transform: translateX(50%) rotate(45deg);
     border-radius: 2px;
+}
+
+.footer{
+    clear: both;
+    text-align: center;
+    line-height: 50px;
+    height: 50px;
+    /* background-color:#1d1d1d; */
+    /* color: #fff; */
+    font-size:larger;
 }
 
 @keyframes fillBars{
@@ -219,7 +238,7 @@ h1:hover{
         width: 90%;
     }
     .profile p{
-        width:40%;
+        width:60%;
         font-size:20px;
     }
     .skillbars{
